2010-09-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] [REGRESSION] r66848 caused a crash in testwebview
        https://bugs.webkit.org/show_bug.cgi?id=45298

        No new tests as this fixes a test failure.

        * platform/gtk/ScrollViewGtk.cpp:
        (WebCore::ScrollView::setGtkAdjustments): Don't actually attach the
        scrollbar adjustments unless this is a main frame ScrollView. If we do
        Scrollbars will be cast incorrectly to MainFrameScrollbarGtk, causing
        a segfault.

2010-09-07  Kristian Monsen  <kristianm@google.com>

        Reviewed by Steve Block.

        Compile fix for Android.
        https://bugs.webkit.org/show_bug.cgi?id=45292
        Explicitly add needed header for 
        STRING_TO_V8PARAMETER_EXCEPTION_BLOCK as they do not get 
        included through other headers on Android.

        No new tests, just a compile fix.

        * bindings/scripts/CodeGeneratorV8.pm:

2010-09-07  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Fix some feature guards
        https://bugs.webkit.org/show_bug.cgi?id=45302

        No new tests as this is just a build change.

        * platform/graphics/gstreamer/DataSourceGStreamer.cpp: Guard with #if ENABLE(VIDEO)
        * platform/graphics/gstreamer/DataSourceGStreamer.h: Ditto.
        * platform/graphics/gstreamer/GOwnPtrGStreamer.cpp: Ditto.
        * platform/graphics/gstreamer/GOwnPtrGStreamer.h: Ditto.
        * platform/graphics/gstreamer/GStreamerGWorld.cpp: Ditto.
        * platform/graphics/gstreamer/GStreamerGWorld.h: Ditto.
        * platform/graphics/gstreamer/ImageGStreamer.h: Ditto.
        * platform/graphics/gstreamer/ImageGStreamerCG.mm: Ditto.
        * platform/graphics/gstreamer/ImageGStreamerCairo.cpp: Ditto.
        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp: Ditto.
        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h: Ditto.