@@ -4672,8 +4672,3 @@ dist_webresources_DATA = \
 	$(WebCore)/Resources/panIcon.png \
 	$(WebCore)/Resources/deleteButton.png \
 	$(WebCore)/Resources/inputSpeech.png
-
-# Clean rules for WebCore
-
-CLEANFILES += \
-	libWebCoreJS.la
